language/move-lang/tests/move_check/typing/uninferred_type_pack.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_pack.move:5:9
  │
5 │         S{};
  │         ^^^ Could not infer this type. Try adding an annotation

